# Project-Global_Illumination

./: CMakeLists.txt
Project - Global Illumination/: CMakeLists.txt  Camera..h  Camera.h  CollisionHandler.cpp  CollisionHandler.h  ColorDBL.cpp  ColorDBL.h  CpuManagement.h  Light.cpp  Light.h  Material.cpp  Material.h  Project - Global Illumination.cpp  Ray.cpp  Ray.h  Rectangle.cpp  Rectangle.h  Scene.cpp  Scene.h  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  scene.cpp
